# dds-experiment

./: .gitignore  .gitmodules  CMakeLists.txt  __init__.py  python_client.py  python_server.py  readme.md  requirements.txt  vcpkg.json
idl/: entity_interface.idl  vehicle.idl
include/: entity.h
pyidl/: .idlpy_manifest
pyidl/entities/: .idlpy_manifest  __init__.py  _entity_interface.py
pyidl/vehicles/: __init__.py  _vehicle.py
src/: CMakeLists.txt  entity.c  publisher.c
test/: CMakeLists.txt  check_main.c
